adds CRUD operations to meetings

--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -52,6 +52,7 @@
           <% if(me) { %>
           <span class="nav-item nav-link ml-2 ml-md-0 mr-2 mr-md-0"><%= me.fullName %></span>
           <a class="nav-item nav-link ml-2 ml-md-0 mr-2 mr-md-0" href="/contact">Help</a>
+          <a class="nav-item nav-link ml-2 ml-md-0 mr-2 mr-md-0" href="/meetings">Meetings</a>
           <!-- Only in desktop nav -->
           <div class="nav-item dropdown d-none d-sm-block">
             <a class="nav-link dropdown-toggle" id="header-account-menu-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Account</a>
@@ -162,6 +163,8 @@
     <script src="/js/pages/legal/privacy.page.js"></script>
     <script src="/js/pages/legal/terms.page.js"></script>
     <script src="/js/pages/meetings/all.page.js"></script>
+    <script src="/js/pages/meetings/create.page.js"></script>
+    <script src="/js/pages/meetings/edit.page.js"></script>
     <!--SCRIPTS END-->
 
     <% /* Display an overlay if the current browser is not supported.
