--- a/assets/styles/importer.less
+++ b/assets/styles/importer.less
@@ -34,6 +34,8 @@
 @import 'pages/account/edit-password.less';
 @import 'pages/account/edit-profile.less';
 @import 'pages/meetings/all.less';
+@import 'pages/meetings/edit.less';
+@import 'pages/meetings/create.less';
 @import 'pages/legal/terms.less';
 @import 'pages/legal/privacy.less';
 @import 'pages/faq.less';
