uses mongo as DB and slugifies meetings

--- a/views/pages/meetings/all.ejs
+++ b/views/pages/meetings/all.ejs
@@ -10,7 +10,7 @@
         </div>
         <div class="col-sm-6">
           <span class="float-sm-right">
-            <a style="width: 150px" class="btn btn-sm btn-outline-info" :href="'/meetings/edit/'+ meeting.id">Edit Meeting</a>
+            <a style="width: 150px" class="btn btn-sm btn-outline-info" :href="'/meetings/'+ meeting.slug">View Meeting</a>
           </span>
         </div>
       </div>
