--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -3,7 +3,7 @@
   // we make sure `me` exists.  This ensures we don't have to do `typeof` checks below.
   var me = undefined;
 } %><!DOCTYPE html>
-<html>
+<html lang='<%= req.getLocale() %>' dir='<%= req.dir %>' class='<%= req.dir %>'>
   <head>
     <title>NEW_APP_NAME</title>
 
@@ -55,7 +55,7 @@
           <a class="nav-item nav-link ml-2 ml-md-0 mr-2 mr-md-0" href="/meetings">Meetings</a>
           <!-- Only in desktop nav -->
           <div class="nav-item dropdown d-none d-sm-block">
-            <a class="nav-link dropdown-toggle" id="header-account-menu-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Account</a>
+            <a class="nav-link dropdown-toggle" id="header-account-menu-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><%= __('Welcome') %>Account</a>
             <div style="left: auto; right: 0;" class="dropdown-menu" aria-labelledby="header-account-menu-link">
               <a class="dropdown-item" href="/account">Settings</a>
               <a class="dropdown-item" href="/logout">Sign out</a>
