--- a/views/pages/account/account-overview.ejs
+++ b/views/pages/account/account-overview.ejs
@@ -13,8 +13,12 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-3">Name:</div>
-      <div class="col"><strong>{{me.fullName}}</strong></div>
+      <div class="col-3"><%= __('FirstName') %>:</div>
+      <div class="col"><strong>{{me.firstName}}</strong></div>
+    </div>
+    <div class="row">
+      <div class="col-3"><%= __('LastName') %>:</div>
+      <div class="col"><strong>{{me.lastName}}</strong></div>
     </div>
     <div class="row">
       <div class="col-3">Email:</div>
