--- a/views/pages/contact.ejs
+++ b/views/pages/contact.ejs
@@ -6,9 +6,14 @@
       <hr/>
       <ajax-form action="deliverContactFormMessage" :form-errors.sync="formErrors" :form-data="formData" :form-rules="formRules" :syncing.sync="syncing" :cloud-error.sync="cloudError" @submitted="submittedForm()">
         <div class="form-group">
-          <label for="full-name">Name</label>
-          <input class="form-control" id="full-name" name="full-name" type="text"  :class="[formErrors.fullName ? 'is-invalid' : '']" v-model.trim="formData.fullName" placeholder="Sturgis P. Sturgeon" autocomplete="name" focus-first>
-          <div class="invalid-feedback" v-if="formErrors.fullName">Please let us know what to call you.</div>
+          <label for="first-name"><%= __('FirstName') %></label>
+          <input class="form-control" id="first-name" name="first-name" type="text"  :class="[formErrors.firstName ? 'is-invalid' : '']" v-model.trim="formData.firstName" placeholder="Sturgis" autocomplete="name" focus-first>
+          <div class="invalid-feedback" v-if="formErrors.firstName">Please let us know what your first name is.</div>
+        </div>
+        <div class="form-group">
+          <label for="last-name"><%= __('LastName') %></label>
+          <input class="form-control" id="last-name" name="last-name" type="text"  :class="[formErrors.lastName ? 'is-invalid' : '']" v-model.trim="formData.lastName" placeholder="Sturgis" autocomplete="name">
+          <div class="invalid-feedback" v-if="formErrors.lastName">Please let us know what your last name is.</div>
         </div>
         <div class="form-group">
           <label for="email-address">Email address</label>
