--- a/views/pages/account/edit-profile.ejs
+++ b/views/pages/account/edit-profile.ejs
@@ -1,37 +1,116 @@
 <div id="edit-profile" v-cloak>
   <div class="container pt-5 pb-5">
-    <h1>Update personal info</h1>
-    <hr/>
-    <ajax-form action="updateProfile" :syncing.sync="syncing" :cloud-error.sync="cloudError" :form-data="formData" :form-rules="formRules" :form-errors.sync="formErrors" @submitted="submittedForm()">
-      <div class="row">
-        <div class="col-sm-6">
-          <div class="form-group">
-            <label for="full-name">Full name</label>
-            <input class="form-control" id="full-name" name="full-name" type="text"  :class="[formErrors.fullName ? 'is-invalid' : '']" v-model.trim="formData.fullName" placeholder="Sturgis P. Sturgeon" autocomplete="name" focus-first>
-            <div class="invalid-feedback" v-if="formErrors.fullName">Please enter your full name.</div>
+    <h1>Settings</h1>
+    <ul class="nav nav-tabs mt-4" id="myTab" role="tablist">
+      <li class="nav-item" role="presentation">
+        <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">
+          Personal Information
+        </a>
+      </li>
+      <li class="nav-item" role="presentation">
+        <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="false">
+          Agents
+        </a>
+      </li>
+    </ul>
+    <div class="tab-content" id="myTabContent">
+      <div class="tab-pane fade show active mt-4" id="home" role="tabpanel" aria-labelledby="home-tab">
+        <ajax-form action="updateProfile" :syncing.sync="syncing" :cloud-error.sync="cloudError" :form-data="formData" :form-rules="formRules" :form-errors.sync="formErrors" @submitted="submittedForm()">
+          <div class="row">
+            <div class="col-sm-6">
+              <div class="form-group">
+                <label for="full-name">Full name</label>
+                <input class="form-control" id="full-name" name="full-name" type="text"  :class="[formErrors.fullName ? 'is-invalid' : '']" v-model.trim="formData.fullName" placeholder="Sturgis P. Sturgeon" autocomplete="name" focus-first>
+                <div class="invalid-feedback" v-if="formErrors.fullName">Please enter your full name.</div>
+              </div>
+            </div>
+            <div class="col-sm-6">
+              <div class="form-group">
+                <label for="email-address">Email address</label>
+                <input class="form-control" id="email-address" name="email-address" type="email"  :class="[formErrors.emailAddress ? 'is-invalid' : '']" v-model.trim="formData.emailAddress" placeholder="sturgeon@example.com" autocomplete="email">
+                <div class="invalid-feedback" v-if="formErrors.emailAddress">Please enter a valid email address.</div>
+              </div>
+            </div>
           </div>
-        </div>
-        <div class="col-sm-6">
-          <div class="form-group">
-            <label for="email-address">Email address</label>
-            <input class="form-control" id="email-address" name="email-address" type="email"  :class="[formErrors.emailAddress ? 'is-invalid' : '']" v-model.trim="formData.emailAddress" placeholder="sturgeon@example.com" autocomplete="email">
-            <div class="invalid-feedback" v-if="formErrors.emailAddress">Please enter a valid email address.</div>
+          <div class="row">
+            <div class="col-sm-6">
+              <cloud-error v-if="cloudError === 'emailAlreadyInUse'">There is already an account using that email address.</cloud-error>
+              <cloud-error v-if="cloudError"></cloud-error>
+            </div>
+            <div class="col-sm-6">
+              <div class="form-group text-right">
+                <!-- <a class="btn btn-outline-info" href="/account">Cancel</a> -->
+                <ajax-button type="submit" :syncing="syncing" class="btn btn-dark">Save changes</ajax-button>
+              </div>
+            </div>
+          </div>
+        </ajax-form>
+      </div>
+      <div class="tab-pane fade mt-4" id="profile" role="tabpanel" aria-labelledby="profile-tab">
+        <ajax-form action="createAgent" :syncing.sync="userSyncing" :cloud-error.sync="userCloudError" :form-data="userFormData" :form-rules="userFormRules" :form-errors.sync="formErrors" @submitted="addAgent()">
+          <div class="row">
+            <div class="col-sm-6">
+              <div class="form-group">
+                <label for="full-name">Full name</label>
+                <input class="form-control" id="user-full-name" name="user-full-name" type="text"  :class="[formErrors.userFullName ? 'is-invalid' : '']" v-model.trim="userFormData.userFullName" placeholder="john doe" autocomplete="name" focus-first>
+                <div class="invalid-feedback" v-if="formErrors.userFullName">Please enter your full name.</div>
+              </div>
+            </div>
+            <div class="col-sm-6">
+              <div class="form-group">
+                <label for="user-email-address">Email address</label>
+                <input class="form-control" id="user-email-address" name="user-email-address" type="email"  :class="[formErrors.userEmailAddress ? 'is-invalid' : '']" v-model.trim="userFormData.userEmailAddress" placeholder="alryazan@amazon.com" autocomplete="email">
+                <div class="invalid-feedback" v-if="formErrors.userEmailAddress">Please enter a valid email address.</div>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-sm-6">
+              <!-- <div class="form-group">
+                <label for="full-name">Full name</label>
+                <input class="form-control" id="user-full-name" name="user-full-name" type="text"  :class="[formErrors.userFullName ? 'is-invalid' : '']" v-model.trim="formData.userFullName" placeholder="john doe" autocomplete="name">
+                <div class="invalid-feedback" v-if="formErrors.userFullName">Please enter your full name.</div>
+              </div> -->
+            </div>
+            <div class="col-sm-6">
+              <div class="form-group">
+                <label for="user-password">Password</label>
+                <input class="form-control" id="user-password" name="user-password" type="password"  :class="[formErrors.userPassword ? 'is-invalid' : '']" v-model.trim="userFormData.userPassword" placeholder="••••••••" autocomplete="new-password">
+                <div class="invalid-feedback" v-if="formErrors.userPassword">Please enter a password or choose "Cancel".</div>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-sm-6">
+              <cloud-error v-if="cloudError === 'emailAlreadyInUse'">There is already an account using that email address.</cloud-error>
+              <cloud-error v-if="cloudError"></cloud-error>
+            </div>
+            <div class="col-sm-6">
+              <div class="form-group text-right">
+                <ajax-button type="submit" :syncing="userSyncing" class="btn btn-dark">Add user</ajax-button>
+              </div>
+            </div>
+          </div>
+        </ajax-form>
+        <% req.me.agents.forEach(function(agent){ %>
+          <div class="agent-item">
+            <div class="row mb-3">
+              <div class="col-sm-6">
+                <span><%= agent.fullName %></span>
+              </div>
+            </div>
+          </div>
+        <% }) %>
+        <div v-for="(agent, index) in agents" class="agent-item" :key="index">
+          <div class="row mb-3">
+            <div class="col-sm-6">
+              <span>{{agent.fullname}}</span>
+            </div>
+          <hr/>
           </div>
         </div>
       </div>
-      <div class="row">
-        <div class="col-sm-6">
-          <cloud-error v-if="cloudError === 'emailAlreadyInUse'">There is already an account using that email address.</cloud-error>
-          <cloud-error v-if="cloudError"></cloud-error>
-        </div>
-        <div class="col-sm-6">
-          <div class="form-group text-right">
-            <a class="btn btn-outline-info" href="/account">Cancel</a>
-            <ajax-button type="submit" :syncing="syncing" class="btn btn-dark">Save changes</ajax-button>
-          </div>
-        </div>
-      </div>
-    </ajax-form>
+    </div>
   </div>
 </div>
 <%- /* Expose locals as `window.SAILS_LOCALS` :: */ exposeLocalsToBrowser() %>
