Add show password to login , signup and edit password pages

--- a/assets/styles/pages/account/edit-password.less
+++ b/assets/styles/pages/account/edit-password.less
@@ -1,5 +1,21 @@
 #edit-password {
-
-  //…
-
+  .fa {
+    font-size: 2rem;
+  }
+  #password-container {
+    position: relative;
+  }
+  .toggle{
+    top: 2em;
+    margin-right: 1em;
+    margin-left: auto;
+    padding-top: 0.2em;
+    background: none;
+    border: none;
+    color: #4CAABF;
+    font-weight: 600;
+    position: absolute;
+    right: .75em;
+    z-index: 9;
+  }
 }
