--- a/views/pages/account/edit-password.ejs
+++ b/views/pages/account/edit-password.ejs
@@ -1,36 +1,41 @@
 <div id="edit-password" v-cloak>
-  <div class="container pt-5 pb-5">
-    <h1>Change password</h1>
-    <hr/>
-    <ajax-form action="updatePassword" :syncing.sync="syncing" :cloud-error.sync="cloudError" :form-data="formData" :form-rules="formRules" :form-errors.sync="formErrors" @submitted="submittedForm()">
-      <div class="row">
-        <div class="col-sm-6">
-          <div class="form-group">
-            <label for="password">New password</label>
-            <input class="form-control" id="password" name="password" type="password"  :class="[formErrors.password ? 'is-invalid' : '']" v-model.trim="formData.password" placeholder="••••••••" autocomplete="new-password" focus-first>
-            <div class="invalid-feedback" v-if="formErrors.password">Please enter a password or choose "Cancel".</div>
-          </div>
-        </div>
-        <div class="col-sm-6">
-          <div class="form-group">
-            <label for="confirm-password">Confirm password</label>
+    <div class="container pt-5 pb-5">
+        <h1>Change password</h1>
+        <hr/>
+        <ajax-form action="updatePassword" :syncing.sync="syncing" :cloud-error.sync="cloudError" :form-data="formData" :form-rules="formRules" :form-errors.sync="formErrors" @submitted="submittedForm()">
+            <div class="row">
+                <div class="col-sm-6">
+                    <div id="updated-password-container" class="form-group">
+                        <label for="updated-password">New password</label>
+                        <input class="form-control input" id="updated-password" :type="[ formData.showPassword ? 'text' : 'password' ]" name="updated-password" :class="[formErrors.password ? 'is-invalid' : '']" v-model.trim="formData.password" placeholder="••••••••" autocomplete="password" focus-first>
+                        <button type="button" id="btn-toggle1" class="toggle" @click="togglePassword()">
+                            <i id="eye-icon1" :class="[ formData.showPassword ? 'fa fa-eye' : 'fa fa-eye fa-eye-slash' ]"></i>
+                        </button>
+                        <div class="invalid-feedback" v-if="formErrors.password">Please enter a password or choose
+                            "Cancel".
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6">
+                    <div class="form-group">
+                            <label for="confirm-password">Confirm password</label>
             <input class="form-control" id="confirm-password" name="confirm-password" type="password"  :class="[formErrors.confirmPassword ? 'is-invalid' : '']" v-model.trim="formData.confirmPassword" autocomplete="new-password" placeholder="••••••••">
             <div class="invalid-feedback" v-if="formErrors.confirmPassword">Your new password and confirmation do not match.</div>
-          </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-sm-6">
-          <cloud-error v-if="cloudError"></cloud-error>
-        </div>
-        <div class="col-sm-6">
-          <div class="form-group text-right">
-            <a class="btn btn-outline-info" href="/account">Cancel</a>
-            <ajax-button type="submit" :syncing="syncing" class="btn btn-dark">Save changes</ajax-button>
-          </div>
-        </div>
-      </div>
-    </ajax-form>
-  </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-6">
+                    <cloud-error v-if="cloudError"></cloud-error>
+                </div>
+                <div class="col-sm-6">
+                    <div class="form-group text-right">
+                        <a class="btn btn-outline-info" href="/account">Cancel</a>
+                        <ajax-button type="submit" :syncing="syncing" class="btn btn-dark">Save changes</ajax-button>
+                    </div>
+                </div>
+            </div>
+        </ajax-form>
+    </div>
 </div>
 <%- /* Expose locals as `window.SAILS_LOCALS` :: */ exposeLocalsToBrowser() %>
