Add show password to login , signup and edit password pages

--- a/assets/styles/pages/account/edit-password.less
+++ b/assets/styles/pages/account/edit-password.less
@@ -1,5 +1,25 @@
 #edit-password {
-
-  //…
+  .fa {
+    font-size: 2rem;
+  }
+  .password-container {
+    position: relative;
+  }
+  #updated-password,#btn-toggle1{
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
+  .toggle {
+    top: 0em;
+  }
+  .update-submit-actions {
+    margin-top: 2em;
+  }
+  #confirm-password,#btn-toggle2{
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
 
 }
