--- a/assets/styles/pages/entrance/login.less
+++ b/assets/styles/pages/entrance/login.less
@@ -1,5 +1,31 @@
-#login {
 
-  //…
-
+#container {
+  position: relative;
+}
+#password,#btn-toggle{
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+.remember-me {
+  margin-top: 4rem;
+}
+.row {
+  margin-right: 0;
+  margin-left: 0;
+}
+.toggle {
+  margin-left: auto;
+  padding-top: 0.2em;
+  background: none;
+  border: none;
+  color: #4CAABF;
+  font-weight: 600;
+  position: relative;
+  right: .75em;
+  top: 2.25em;
+  z-index: 9;
+}
+.fa {
+  font-size: 2rem;
 }
