--- a/assets/styles/pages/entrance/signup.less
+++ b/assets/styles/pages/entrance/signup.less
@@ -1,5 +1,27 @@
 #signup {
 
-  //…
+  #signup-confirm-password, #signup-btn-toggle2 {
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
 
+  #signup-password, #signup-btn-toggle1 {
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
+
+  .toggle {
+    top: 0em;
+  }
+
+  .signup-password-container {
+    position: relative;
+  }
+
+  #signup-confirm-password-container {
+    margin-top: 3.5rem;
+    margin-bottom: 3rem;
+  }
 }
