--- a/views/pages/account/edit-password.ejs
+++ b/views/pages/account/edit-password.ejs
@@ -1,36 +1,65 @@
 <div id="edit-password" v-cloak>
-  <div class="container pt-5 pb-5">
-    <h1>Change password</h1>
-    <hr/>
-    <ajax-form action="updatePassword" :syncing.sync="syncing" :cloud-error.sync="cloudError" :form-data="formData" :form-rules="formRules" :form-errors.sync="formErrors" @submitted="submittedForm()">
-      <div class="row">
-        <div class="col-sm-6">
-          <div class="form-group">
-            <label for="password">New password</label>
-            <input class="form-control" id="password" name="password" type="password"  :class="[formErrors.password ? 'is-invalid' : '']" v-model.trim="formData.password" placeholder="••••••••" autocomplete="new-password" focus-first>
-            <div class="invalid-feedback" v-if="formErrors.password">Please enter a password or choose "Cancel".</div>
-          </div>
-        </div>
-        <div class="col-sm-6">
-          <div class="form-group">
-            <label for="confirm-password">Confirm password</label>
-            <input class="form-control" id="confirm-password" name="confirm-password" type="password"  :class="[formErrors.confirmPassword ? 'is-invalid' : '']" v-model.trim="formData.confirmPassword" autocomplete="new-password" placeholder="••••••••">
-            <div class="invalid-feedback" v-if="formErrors.confirmPassword">Your new password and confirmation do not match.</div>
-          </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-sm-6">
-          <cloud-error v-if="cloudError"></cloud-error>
-        </div>
-        <div class="col-sm-6">
-          <div class="form-group text-right">
-            <a class="btn btn-outline-info" href="/account">Cancel</a>
-            <ajax-button type="submit" :syncing="syncing" class="btn btn-dark">Save changes</ajax-button>
-          </div>
-        </div>
-      </div>
-    </ajax-form>
-  </div>
+    <div class="container pt-5 pb-5">
+        <h1>Change password</h1>
+        <hr/>
+        <ajax-form action="updatePassword" :syncing.sync="syncing" :cloud-error.sync="cloudError" :form-data="formData"
+                   :form-rules="formRules" :form-errors.sync="formErrors" @submitted="submittedForm()">
+            <div class="row">
+                <div class="col-sm-6">
+                    <div class="form-group">
+                        <div class="row">
+                            <label for="updated-password">New password</label>
+                        </div>
+                        <div class="row password-container">
+                            <input class="form-control input" id="updated-password" type="password"
+                                   name="updated-password"
+                                   :class="[formErrors.password ? 'is-invalid' : '']"
+                                   :class="[formErrors.password ? 'is-invalid' : '']"
+                                   v-model.trim="formData.password"
+                                   placeholder="••••••••" autocomplete="password" focus-first>
+                            <button type="button" id="btn-toggle1" class="toggle"
+                                    @click="togglePassword('updated-password' , 'eye-icon1')">
+                                <i id="eye-icon1" class="fa fa-eye"></i>
+                            </button>
+                            <div class="invalid-feedback" v-if="formErrors.password">Please enter a password or choose
+                                "Cancel".
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6">
+                    <div class="form-group">
+                        <div class="row">
+                            <label for="confirm-password">Confirm password</label>
+                        </div>
+                        <div class="row password-container">
+                            <input class="form-control" id="confirm-password" name="confirm-password" type="password"
+                                   :class="[formErrors.confirmPassword ? 'is-invalid' : '']"
+                                   v-model.trim="formData.confirmPassword" autocomplete="new-password"
+                                   placeholder="••••••••">
+                            <button type="button" id="btn-toggle2" class="toggle"
+                                    @click="togglePassword('confirm-password' , 'eye-icon2')">
+                                <i id="eye-icon2" class="fa fa-eye"></i>
+                            </button>
+                            <div class="invalid-feedback" v-if="formErrors.confirmPassword">Your new password and
+                                confirmation do not match.
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row update-submit-actions">
+                <div class="col-sm-6">
+                    <cloud-error v-if="cloudError"></cloud-error>
+                </div>
+                <div class="col-sm-6">
+                    <div class="form-group text-right">
+                        <a class="btn btn-outline-info" href="/account">Cancel</a>
+                        <ajax-button type="submit" :syncing="syncing" class="btn btn-dark">Save changes</ajax-button>
+                    </div>
+                </div>
+            </div>
+        </ajax-form>
+    </div>
 </div>
 <%- /* Expose locals as `window.SAILS_LOCALS` :: */ exposeLocalsToBrowser() %>
