--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -53,8 +53,10 @@
   </head>
   <body>
     <div purpose="page-wrap">
-      <header class="d-none navbar navbar-expand-sm navbar-dark bg-dark flex-column flex-md-row justify-content-between" purpose="page-header">
-        <a style="cursor: pointer;" class="navbar-brand mr-0" href="/"><img style="height: 20px;" class="logo" alt="NEW_APP_NAME logo" src="/images/logo.png"/></a>
+      <header class="navbar navbar-expand-sm navbar-dark bg-dark flex-column flex-md-row justify-content-between" purpose="page-header">
+        <a style="cursor: pointer;" class="navbar-brand mr-0" href="/">
+          <img style="height: 20px;" class="logo" alt="NEW_APP_NAME logo" src="/images/logo.png"/>
+        </a>
         <div class="navbar-nav flex-row">
           <!-- LOGGED-IN NAVIGATION -->
           <% if(me) { %>
@@ -64,7 +66,7 @@
           <!-- Only in desktop nav -->
           <div class="nav-item dropdown d-none d-sm-block">
             <a class="nav-link dropdown-toggle" id="header-account-menu-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><%= __('Account') %></a>
-            <div style="left: auto; right: 0;" class="dropdown-menu" aria-labelledby="header-account-menu-link">
+            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="header-account-menu-link">
               <% sails.config.i18n.locales.forEach(locale => { %>
                 <a class="dropdown-item" href="?lang=<%=locale%>" data-lang="<%=locale%>">
                   <%= __(locale.toUpperCase()) %>
@@ -91,7 +93,7 @@
         </div>
       </header>
 
-      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <nav class=" d-none navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand" href="#">Navbar</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -119,10 +121,22 @@
             <li class="nav-item">
               <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
             </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Language
+              </a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <% sails.config.i18n.locales.forEach(locale => { %>
+                  <a class="dropdown-item" href="?lang=<%=locale%>" data-lang="<%=locale%>">
+                    <%= __(locale.toUpperCase()) %>
+                  </a>
+                <% })%>
+              </div>
+            </li>
           </ul>
           <form class="form-inline my-2 my-lg-0">
             <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+            <button class="btn btn-outline-info my-2 my-sm-0" type="submit">Search</button>
           </form>
         </div>
       </nav>
