--- a/views/pages/meetings/all.ejs
+++ b/views/pages/meetings/all.ejs
@@ -5,18 +5,16 @@
     <hr/>
     <div v-for="(meeting, index) in meetings" class="meeting-item" :key="index">
       <div class="row mb-3">
-        <div class="col-sm-6">
-          <h4>{{meeting.title}}</h4>
+        <div class="col-sm-12">
+          <div class="card">
+            <h5 class="card-header">Meeting {{index+1}}</h5>
+            <div class="card-body">
+              <h5 class="card-title">{{meeting.title}}</h5>
+              <p class="card-text">{{meeting.notes}}</p>
+              <a class="btn btn-sm btn-outline-dark" :href="'/meetings/'+ meeting.slug">View Meeting</a>
+            </div>
+          </div>
         </div>
-        <div class="col-sm-6">
-          <span class="float-sm-right">
-            <a style="width: 150px" class="btn btn-sm btn-outline-info" :href="'/meetings/'+ meeting.slug">View Meeting</a>
-          </span>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-3">Notes:</div>
-        <div class="col"><strong>{{meeting.notes}}</strong></div>
       </div>
       <hr/>
     </div>
