enhances show password feature

--- a/assets/styles/pages/account/edit-password.less
+++ b/assets/styles/pages/account/edit-password.less
@@ -1,21 +1,13 @@
 #edit-password {
-  .fa {
-    font-size: 2rem;
-  }
-  #password-container {
+
+  .password-container {
     position: relative;
-  }
-  .toggle{
-    top: 2em;
-    margin-right: 1em;
-    margin-left: auto;
-    padding-top: 0.2em;
-    background: none;
-    border: none;
-    color: #4CAABF;
-    font-weight: 600;
-    position: absolute;
-    right: .75em;
-    z-index: 9;
+
+    .toggle-password{
+      position: absolute;
+      top: 2.1em;
+      right: 1em;
+      font-size: 20px;
+    }
   }
 }
