--- a/assets/styles/pages/entrance/login.less
+++ b/assets/styles/pages/entrance/login.less
@@ -1,20 +1,14 @@
 #login {
-  #password-container {
+
+  .password-container {
     position: relative;
-  }
-  .toggle {
-    margin-left: auto;
-    padding-top: 0.2em;
-    background: none;
-    border: none;
-    color: #4CAABF;
-    font-weight: 600;
-    position: absolute;
-    right: .75em;
-    top: 0em;
-    z-index: 9;
-  }
-  .fa {
-    font-size: 2rem;
+
+    .toggle-password{
+      position: absolute;
+      top: 0.5em;
+      right: 1em;
+      font-size: 20px;
+
+    }
   }
 }
