--- a/views/pages/account/edit-password.ejs
+++ b/views/pages/account/edit-password.ejs
@@ -5,12 +5,10 @@
         <ajax-form action="updatePassword" :syncing.sync="syncing" :cloud-error.sync="cloudError" :form-data="formData" :form-rules="formRules" :form-errors.sync="formErrors" @submitted="submittedForm()">
             <div class="row">
                 <div class="col-sm-6">
-                    <div id="updated-password-container" class="form-group">
+                    <div class="form-group password-container">
                         <label for="updated-password">New password</label>
                         <input class="form-control input" id="updated-password" :type="[ formData.showPassword ? 'text' : 'password' ]" name="updated-password" :class="[formErrors.password ? 'is-invalid' : '']" v-model.trim="formData.password" placeholder="••••••••" autocomplete="password" focus-first>
-                        <button type="button" id="btn-toggle1" class="toggle" @click="togglePassword()">
-                            <i id="eye-icon1" :class="[ formData.showPassword ? 'fa fa-eye' : 'fa fa-eye fa-eye-slash' ]"></i>
-                        </button>
+                        <i :class="[ formData.showPassword ? 'fa fa-eye' : 'fa fa-eye-slash' ]" class="toggle-password" @click="togglePassword()"></i>
                         <div class="invalid-feedback" v-if="formErrors.password">Please enter a password or choose
                             "Cancel".
                         </div>
