fixing bugs and new nav

--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -53,7 +53,7 @@
   </head>
   <body>
     <div purpose="page-wrap">
-      <header class="navbar navbar-expand-sm navbar-dark bg-dark flex-column flex-md-row justify-content-between" purpose="page-header">
+      <header class="d-none navbar navbar-expand-sm navbar-dark bg-dark flex-column flex-md-row justify-content-between" purpose="page-header">
         <a style="cursor: pointer;" class="navbar-brand mr-0" href="/">
           <img style="height: 20px;" class="logo" alt="NEW_APP_NAME logo" src="/images/logo.png"/>
         </a>
@@ -93,37 +93,67 @@
         </div>
       </header>
 
-      <nav class="d-none navbar navbar-expand-lg navbar-dark bg-dark" purpose="page-header">
-        <a class="navbar-brand" href="#">Navbar</a>
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark" purpose="page-header">
+        <a style="cursor: pointer;" class="navbar-brand mr-0" href="/">
+          <img style="height: 20px;" class="logo" alt="NEW_APP_NAME logo" src="/images/logo.png"/>
+        </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
       
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
-            </li>
+            <% if(me) { %>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Dropdown
+                <%= me.firstName %> <%= me.lastName %> <%= __('Account') %>
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="#">Action</a>
-                <a class="dropdown-item" href="#">Another action</a>
-                <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="#">Something else here</a>
+                <a class="dropdown-item" href="/account"><%= __('Settings') %></a>
+                <a class="dropdown-item" href="/logout"><%= __('Signout') %></a>
               </div>
             </li>
             <li class="nav-item">
-              <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+              <a class="nav-item nav-link ml-2 ml-md-0 mr-2 mr-md-0" href="/meetings">Meetings</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Language
+                <i class="fa fa-envelope-o"></i>
+                <!-- <span class="badge badge-primary">11</span> -->
+              </a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <div class="list-group" style="min-width: 300px;">
+                  <a href="#" class="list-group-item list-group-item-action active">
+                    <div class="d-flex w-100 justify-content-between">
+                      <h5 class="mb-1">List group item heading</h5>
+                      <small>3 days ago</small>
+                    </div>
+                    <p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
+                    <small>Donec id elit non mi porta.</small>
+                  </a>
+                  <a href="#" class="list-group-item list-group-item-action">
+                    <div class="d-flex w-100 justify-content-between">
+                      <h5 class="mb-1">List group item heading</h5>
+                      <small class="text-muted">3 days ago</small>
+                    </div>
+                    <p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
+                    <small class="text-muted">Donec id elit non mi porta.</small>
+                  </a>
+                  <a href="#" class="list-group-item list-group-item-action">
+                    <div class="d-flex w-100 justify-content-between">
+                      <h5 class="mb-1">List group item heading</h5>
+                      <small class="text-muted">3 days ago</small>
+                    </div>
+                    <p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
+                    <small class="text-muted">Donec id elit non mi porta.</small>
+                  </a>
+                </div>
+              </div>
+            </li>
+            <% } %>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <i class="fa fa-globe"></i>
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <% sails.config.i18n.locales.forEach(locale => { %>
@@ -133,6 +163,20 @@
                 <% })%>
               </div>
             </li>
+            <li class="nav-item">
+              <a class="nav-item nav-link ml-2 ml-md-0 mr-2 mr-md-0" href="/contact">Help</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-item nav-link ml-2 ml-md-0 mr-2" href="/faq">FAQ</a>
+            </li>
+            <% if(!me) { %>
+            <li class="nav-item">
+              <a class="nav-item nav-link ml-2 ml-md-0 mr-2" href="/login">Log in</a>
+            </li>
+            <li class="nav-item">
+              <a class="btn btn-outline-info" href="/signup">Sign up</a>
+            </li>
+            <% } %>
           </ul>
           <form class="form-inline my-2 my-lg-0">
             <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
@@ -140,6 +184,13 @@
           </form>
         </div>
       </nav>
+
+      <div class="alert alert-warning alert-dismissible fade show" role="alert">
+        <strong>Holy guacamole!</strong> You should check in on some of those fields below.
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
 
       <!-- Alert if email has not been confirmed -->
       <% if(me&&me.emailChangeCandidate) { %>
